--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,26 @@
   pointer-events: none;
 }
 
+.navbar_warapper a{
+  padding-left: 30px
+}
+
+.delete{
+  background-color: red;
+  color: black;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.update{
+  background-color: green;
+  color: black;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -28,6 +48,7 @@
   color: #61dafb;
 }
 
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +57,5 @@
     transform: rotate(360deg);
   }
 }
+
+
